Explicitly reload the model whenever the cache has changed

This way we make sure the project is re-parsed with the new CMakeCache, this
was a problem with some projects that use RUNTIME_OUTPUT_DIRECTORY

BUG: 317587